<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_wallet"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/nav_wallet" />
    <item
        android:id="@+id/nav_category"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_category" />
    <item
        android:id="@+id/nav_budget"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_budget" />
    <item
        android:id="@+id/nav_report"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_report" />
</menu>
