<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_business_dashboard"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/business_nav_dashboard" />

    <item
        android:id="@+id/nav_business_management"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/business_nav_business" />

    <item
        android:id="@+id/nav_business_transaction"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/business_nav_transaction" />

    <item
        android:id="@+id/nav_business_report"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/business_nav_report" />
</menu>
