<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_transaction_title"
        style="@style/Text.Finance.Title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_transaction"
        style="@style/Widget.Finance.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/business_add_transaction" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/business_transaction_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="20dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/tv_business_transaction_empty"
        style="@style/Text.Finance.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:text="@string/business_empty_transaction"
        android:visibility="gone" />

</LinearLayout>
